Fix travis.yml for realz

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ osx_image: xcode8.2
 
 script:
   - swift build
-  - xcodebuild -scheme time build test
+  - xcodebuild -scheme Time build test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
