--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: objective-c
 osx_image: xcode8.2
+node_js:
+  - "6"
+
+before_script:
+  - npm install -g swiftx
 
 script:
   - swift build
@@ -7,3 +12,9 @@ script:
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - swiftx update-build-config --owner randymarsh77 --configPath builds/swift/config
+  - swiftx update-dependency-graph --owner randymarsh77 --configPath builds/swift/config
+  - swiftx trigger-downstream-builds --owner randymarsh77 --configPath builds/swift/config
+
+after_failure:
+  - swiftx trigger-downstream-builds --owner randymarsh77 --configPath builds/swift/config --force
