--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build and Test
-        run: swift test
+        run: swift test --enable-test-discovery
