--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: macOS-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
 
       - name: Build and Test
         run: swift test
 
       - name: Code Cov
-        if: ${{ github.ref == 'master' }}
+        if: github.ref == 'refs/heads/master'
         run: bash <(curl -s https://codecov.io/bash)
 
   linux:
