--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   macos:
-    runs-on: macOS-latest
+    runs-on: macos-15
     steps:
       - name: Checkout
         uses: actions/checkout@v4
