--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     tags-ignore: ["**"]
 
 jobs:
-  macos:
+  macos-arm:
+    name: macOS (arm64)
     runs-on: macos-15
     steps:
       - name: Checkout
@@ -20,7 +21,18 @@ jobs:
         if: github.ref == 'refs/heads/master'
         run: bash <(curl -s https://codecov.io/bash)
 
+  macos-intel:
+    name: macOS (x64)
+    runs-on: macos-15-large
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build and Test
+        run: swift test
+
   linux:
+    name: Linux
     runs-on: ubuntu-latest
     container:
       image: swift:6.0
