--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build and Test
-        run: swift test
+        run: swift test --enable-code-coverage
 
       - name: Code Cov
         if: github.ref == 'refs/heads/master'
