--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,15 @@ jobs:
         run: swift test --enable-code-coverage
 
       - name: Prepare coverage report
-        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > info.lcov
-
-      - name: Upload test coverage
         if: github.ref == 'refs/heads/master'
-        uses: codecov/codecov-action@v5
+        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > macos-arm64.lcov
+
+      - name: Cache coverage report
+        if: github.ref == 'refs/heads/master'
+        uses: actions/upload-artifact@v2
         with:
-          fail_ci_if_error: true
-          files: info.lcov
-          token: ${{ secrets.CODECOV_TOKEN }}
+          name: coverage-reports
+          files: macos-arm64.lcov
 
   macos-intel:
     name: macOS (x64)
@@ -36,7 +36,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build and Test
-        run: swift test
+        run: swift test --enable-code-coverage
+
+      - name: Prepare coverage report
+        if: github.ref == 'refs/heads/master'
+        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > macos-x64.lcov
+
+      - name: Cache coverage report
+        if: github.ref == 'refs/heads/master'
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-reports
+          files: macos-x64.lcov
 
   linux:
     name: Linux
@@ -50,3 +61,21 @@ jobs:
 
       - name: Build and Test
         run: swift test --enable-test-discovery
+
+  test-coverage:
+    name: Test Coverage
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: [macos-arm, macos-intel, linux]
+    steps:
+      - name: Restore coverage reports
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage-reports
+
+      - name: Upload test coverage
+        uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true
+          files: macos-arm64.lcov,macos-x64.lcov
+          token: ${{ secrets.CODECOV_TOKEN }}
