--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [macos-arm, macos-intel, linux]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Restore coverage reports
         uses: actions/download-artifact@v4
         with:
