--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build and Test
-        run: swift test --enable-test-discovery
+        run: swift test --enable-test-discovery --enable-code-coverage
+
+      - name: Prepare coverage report
+        if: github.ref == 'refs/heads/master'
+        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > linux.lcov
+
+      - name: Cache coverage report
+        if: github.ref == 'refs/heads/master'
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report-linux
+          path: linux.lcov
+
 
   test-coverage:
     name: Test Coverage
@@ -80,5 +92,5 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           fail_ci_if_error: true
-          files: macos-arm64.lcov,macos-x64.lcov
+          files: macos-arm64.lcov,macos-x64.lcov,linux.lcov
           token: ${{ secrets.CODECOV_TOKEN }}
