--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Prepare coverage report
         if: github.ref == 'refs/heads/master'
-        run: /usr/share/swift/usr/bin/llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > linux.lcov
+        run: $(dirname $(realpath $(which swift)))/llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > linux.lcov
 
       - name: Cache coverage report
         if: github.ref == 'refs/heads/master'
