--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Prepare coverage report
         if: github.ref == 'refs/heads/master'
-        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > macos-arm64.lcov
+        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests -instr-profile .build/debug/codecov/default.profdata > macos-arm64.lcov
 
       - name: Cache coverage report
         if: github.ref == 'refs/heads/master'
@@ -40,7 +40,7 @@ jobs:
 
       - name: Prepare coverage report
         if: github.ref == 'refs/heads/master'
-        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests  -instr-profile .build/debug/codecov/default.profdata > macos-x64.lcov
+        run: xcrun llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest/Contents/MacOS/TimePackageTests -instr-profile .build/debug/codecov/default.profdata > macos-x64.lcov
 
       - name: Cache coverage report
         if: github.ref == 'refs/heads/master'
@@ -64,7 +64,7 @@ jobs:
 
       - name: Prepare coverage report
         if: github.ref == 'refs/heads/master'
-        run: $(dirname $(realpath $(which swift)))/llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest  -instr-profile .build/debug/codecov/default.profdata > linux.lcov
+        run: $(dirname $(realpath $(which swift)))/llvm-cov export -format="lcov" .build/debug/TimePackageTests.xctest -instr-profile .build/debug/codecov/default.profdata > linux.lcov
 
       - name: Cache coverage report
         if: github.ref == 'refs/heads/master'
@@ -92,5 +92,5 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           fail_ci_if_error: true
-          files: macos-arm64.lcov,macos-x64.lcov,linux.lcov
+          files: linux.lcov
           token: ${{ secrets.CODECOV_TOKEN }}
