--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Lint
+        uses: cirruslabs/swiftlint-action@v1
+        with:
+          version: latest
+
       - name: Build and Test
         run: swift test --enable-code-coverage
 
@@ -34,6 +39,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Lint
+        uses: cirruslabs/swiftlint-action@v1
+        with:
+          version: latest
 
       - name: Build and Test
         run: swift test --enable-code-coverage
@@ -59,8 +69,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Lint
+        uses: cirruslabs/swiftlint-action@v1
+        with:
+          version: latest
+
       - name: Build and Test
-        run: swift test --enable-test-discovery --enable-code-coverage
+        run: swift test --enable-code-coverage
 
       - name: Prepare coverage report
         if: github.ref == 'refs/heads/master'
