--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,12 @@
 included: 
   - Sources
   - Tests
-  
+
+identifier_name:
+  min_length:
+    warning: 0
+    error: 0
+
+line_length:
+  warning: 500
+  error: 500
